--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,16 @@
   "printWidth": 100,
   "singleQuote": true,
   "jsxSingleQuote": true,
-  "importOrder": ["^@/(.*)$", "^[./]"],
+  "importOrder": [
+    "^react$",
+    "^[^@/.](.*)$",
+    "^[@](?!/)(.*)",
+    "^@/contexts/(.*)$",
+    "^@/components/(.*)$",
+    "^@/pages/(.*)$",
+    "^@/(.*)$",
+    "^[./]"
+  ],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true
 }
